Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4797

Backslash-escape is not allowed in rewriting rules

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 7.0.0
    • Plugins
    • None

    Description

      I noticed that backslash-escape in quoted-string is not allowed in header-rewrite plugin rules. IIRC, this is allowed in 5.3.x.

      e.g.

      cond %{SEND_RESPONSE_HDR_HOOK}
      add-header Public-Key-Pins "pin-sha256=\"UgXZQmS15cJoBeWTvbmCE+PGw5/oHV00e+MMyuXr0YQ=\"; pin-sha256=\"eYKlKmvqHnR4CsglcYuNzvro7rrmFINrje5nSAxnEsc=\"; max-age=600; includeSubDomains" [L]
      

      I got below error

      20160830.16h19m34s [header_rewrite] malformed line "add-header Public-Key-Pins "pin-sha256=\"UgXZQmS15cJoBeWTvbmCE+PGw5/oHV00e+MMyuXr0YQ=\"; pin-sha256=\"eYKlKmvqHnR4CsglcYuNzvro7rrmFINrje5nSAxnEsc=\"; max-age=600; includeSubDomains" [L]" ignoring...
      

      Attachments

        Issue Links

          Activity

            There are no comments yet on this issue.

            People

              masaori Masaori Koshiba
              masaori Masaori Koshiba
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 2h 20m
                  2h 20m