TS-4797: Allow backslash-escape in header_rewrite rules